Ultrasonic Sensor Workspace/Ultrasonic Distance Meter.cydsn/BUILD.log
--------------- Build Started: 04/21/2021 01:32:00 Project: Ultrasonic Distance Meter, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Kurty\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Kurty\Documents\Ultrasonic GitHub (TRC3500)\Ultrasonic-PSoC\Ultrasonic Sensor Workspace\Ultrasonic Distance Meter.cydsn\Ultrasonic Distance Meter.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\Kurty\Documents\Ultrasonic GitHub (TRC3500)\Ultrasonic-PSoC\Ultrasonic Sensor Workspace\Ultrasonic Distance Meter.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 2 pin(s) will be assigned a location by the fitter: TX_1(0), TX_2(0)
Analog Placement...
Log: apr.M0058: The analog placement iterative improvement is 38% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 75% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
Warning: sta.M0021: Ultrasonic Distance Meter_timing.html: Warning-1350: Asynchronous path(s) exist from "Ultrasonic_Drive(routed)" to "Ultrasonic_Drive". See the timing report for details. (File=C:\Users\Kurty\Documents\Ultrasonic GitHub (TRC3500)\Ultrasonic-PSoC\Ultrasonic Sensor Workspace\Ultrasonic Distance Meter.cydsn\Ultrasonic Distance Meter_timing.html)
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c:70:19: error: initializer element is not constant
 int writeStatus = EEPROM_WriteByte(1,0);
                   ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 04/21/2021 01:32:14 ---------------
